fix safari overflow 恢復原本的寫法
裡面不能有定位在外面的 absolute 的東西

--- a/scss/price.scss
+++ b/scss/price.scss
@@ -107,8 +107,11 @@ header{
     justify-content: center;
     margin-top: 3rem;
     margin-bottom: 3rem;
-    .btn-group:not(:last-child){
-        margin-right: 1rem;
+    .btn-group{
+        position: relative;
+        &:not(:last-child){
+            margin-right: 1rem;
+        }
     }
 }
 
@@ -179,15 +182,12 @@ header{
             height: $circle-size;
     }
     .row-plan-btn {
-        display: block;
+        justify-content: flex-start;
         margin-top: 1.5rem;
         margin-bottom: 2rem;
         padding: 0 20px;
-        .btn-group{
-            display: inline-block;           
-            &, &:not(:last-child){
-                margin-right: .375rem;
-            }
+        .btn-group:not(:last-child){
+            margin-right: .375rem;
         }
         .btn{
             padding: .5rem 1rem;
